compiler/test/fail_compilation/deprecations_preview_in_switch.d
/*
REQUIRED_ARGS: -de -preview=in
TEST_OUTPUT:
---
Deprecation: `-preview=in` is now the default behavior and has no effect
---
*/

#line 1
void main() {}
